k8s/teacher/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teacher-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /teacher
            pathType: "Prefix"
            backend:
              service:
                name: teacher-service
                port:
                  number: 8085
